# django-jsonapi

./: .gitignore  .prettierrc.yaml  Makefile  README.md  SDK_GENERATION.md  TODO.md  clienttest.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
articles_sdk/: __init__.py  resources.py
articles_sdk/_runtime/: __init__.py  collection.py  exceptions.py  sdk.py
articles_sdk_ts/: clienttest.ts  index.ts  resources.ts  sdk.ts
articles_sdk_ts/_runtime/: types.ts
demo_sdk/: __init__.py  resources.py  sdk.py
demo_sdk/_runtime/: collection.py  resource.py
docs/: index.md
docs/sdk/: collection.md  errors.md  generation.md  index.md  resource.md  typed.md  usage.md
docs/server/: endpoints.md  errors.md  openapi.md  resources.md  url-linking.md  validation.md
examples/: clienttest.py  db.sqlite3  manage.py
examples/articles/: admin.py  models.py  resources.py  urls.py  views.py  views2.py
examples/backoffice/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
examples/blog/: settings.py  urls.py
examples/clienttest_py/: main.py
examples/clienttest_ts/: main.ts
examples/server/: db.sqlite3  manage.py
site/: 404.html  index.html
site/sdk/: index.html
site/search/: search_index.json
src/djsonapi/: __init__.py  api.py  api2.py  exceptions.py  generator.py  resource.py  response.py
src/djsonapi_client/: __init__.py  collection.py  resource.py  sdk.py
src/djsonapi_client_py/: collection.py  exceptions.py  resource.py  sdk.py
tests/: test_api.py  test_api2.py  test_jsonschema_create.py  test_jsonschema_edit.py  test_jsonschema_read.py  test_serialize.py
tests/client/: conftest.py  (+5 more)
(+50 files in other folders)
