[project]
name = "djsonapi"
version = "0.1.0"
description = "JSON:API framework for Django"
readme = "README.md"
authors = [{ name = "Konstantinos Bairaktaris", email = "ikijob@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "django>=4.2",
    "jsonschema>=4.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.26.0",
    "django-stubs>=5.1.0",
    "aioresponses>=0.7.7",
    "ruff>=0.6.0",
    "pyright>=1.1.390",
]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingModuleSource = "none"
reportUnnecessaryTypeIgnoreComment = false
exclude = ["**/node_modules", "**/.venv", "examples/clienttest_py/**"]
